tests/miniJava/neg/006700_mutation.MiniJava
class java { public static void return ( String [ ] java ) { { } } }
